--- a/add-entry.html
+++ b/add-entry.html
@@ -6,6 +6,20 @@
     <title>Add a new entry</title>
   </head>
   <body>
-    
+		
+	<a href="index.html"> link zurück </a>
+	  <h1> hi </h1>
+
+
+<form>
+  <label for="fname">hier kommt ein input rein</label><br>
+  <input type="text" id="fname" name="fname"><br>
+  <input type="submit">
+</form>
+
+		<textarea id="w3review" name="w3review" rows="4" cols="50">
+		dashier ist ein textarea
+	</textarea>	
+
   </body>
 </html>
