--- a/add-entry.html
+++ b/add-entry.html
@@ -12,8 +12,9 @@
 
 
 <form>
-  <label for="fname">hier kommt ein input rein</label><br>
-  <input type="text" id="fname" name="fname"><br>
+  <label for="fname">hier kommt ein input rein</label>
+  <input type="text">
+  <input type="text">
   <input type="submit">
 </form>
 
