--- a/add-entry.html
+++ b/add-entry.html
@@ -12,9 +12,8 @@
 
 
 <form>
-  <label for="fname">hier kommt ein input rein</label>
-  <input type="text">
-  <input type="text">
+  <label for="fname">hier kommt ein input rein</label><br>
+  <input type="text" id="fname" name="fname"><br>
   <input type="submit">
 </form>
 
