--- a/add-entry.html
+++ b/add-entry.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,6 +7,16 @@
     <title>Add a new entry</title>
   </head>
   <body>
-    
+  <h1>Add a new entery</h1>
+  <nav>
+    <ul><li><a href="index.html" >index.html</a></li></ul>
+  </nav>
+  <form>
+    <label for="username" >Username:</label>
+    <input name="username" type="text"/>
+    <label for="wohnort" >Wohnort:</label>
+    <textarea name="Wohnort"></textarea>
+    <input type="submit" value="Send"/>
+  </form>
   </body>
 </html>
